--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -1,12 +1,8 @@
 @charset 'UTF-8';
 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,200&display=swap');
-@import '//codepen.io/chrisdothml/pen/ojLzJK.css';
 
-#orçamento p, #orçamento p::before{
-    transition: all 0.35s;
-    transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krub&display=swap');
 
 *{
     margin: 0;
@@ -16,16 +12,14 @@
     text-decoration: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 :root{
     --cor1: #000000; 
-    --cor2: #54728c;
-    --cor3: #f2d98d;
-    --cor4: #a6785d;
-    --cor5: #d9665b;
+    --cor2: #fff;
+    --cor3: #CFDA4D;
+    --cor4: #383333;
 }
-
 
 html{
     font-size: 62.5%;
@@ -33,15 +27,16 @@ html{
 }
 
 body{
+    background-color: #383333;
     color: white;
 }
 
 /* ----- Header ----- */
 header{
     width: 100vw;
-    height: 109px;
+    height: 90px;
     padding: 2rem 9%;
-    background-color: #000000;
+    background-color: #181717;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -51,8 +46,8 @@ header{
     height: 69px;
 }
 header > nav > a{
-    font-size: 1.3em;
-    color: #505B65;
+    font-size: 20px;
+    color: white;
     margin-left: 25px;
     transition: 1s;
 }
@@ -63,70 +58,130 @@ header > nav > a:hover{
 /* ---------------------*/
 
 /* ---------------------------------------------- */
-main{
+section#home{
     width: 100vw;
-    background-color: white;
-    align-items: center;
-}
-section.home{
-    display: flex;
-    width: 100%;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 90px);
     position: relative;
     justify-content: center;
     overflow: hidden;
-    background-position: top top;
-    background-image: url("../Imagens/Design\ sem\ nome\ \(10\).png");
+    background-image: url("../Imagens/01.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     align-items: center;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Inter', sans-serif;
 }
-.home > div#home > h1{
-    font-size: 5.5em;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight: 100;
+section#home > div#title h2{
+    font-family: 'Inter', sans-serif;
+    font-weight: 200;
+    text-align: center;
+    font-size: 48px;
 }
-button#orçamento{
+section#home > div#title p{
+    font-family: 'Inter', sans-serif;
+    text-align: center;
+    font-size: 32px;
+}
+section#home > div#title p > span{
+    color: #CFDA4D;
+    text-shadow: 0px 0px 1px black;
+}
+section#home a > button{
+    font-family: 'Inter', sans-serif;
+    background-color: #CFDA4D;
     width: 300px;
-    height: 50px;
-    background-color: transparent;
-    margin-top: 20px;
-    border-radius: 5px;
-    border: 2px solid white;
+    height: 65px;
+    border-radius: 10px;
+    font-size: 4em;
+    color: #383333;
+    margin-top: 114px;
+    transition: 0.3s;
 }
-button#orçamento:hover{
+section#home a > button:hover{
+    transform: scale(1.20);
     cursor: pointer;
-    transform: scale(0.9);
-    transition: .5s;
 }
-p#butttonOrçemanto{
-    font-size: 1.7em;
-    color: white;
-}
-
-section.secsobre{
-    display: flex;
-    height: 680px;
-    color: black;
-    padding: 30px;
-    
-}
-
-
 /* ---------------------------------------------- */
 
 /* ---------------------------------------------- */
-footer{
-    padding: 15px 100px 30px 100px;
-    background-color: #000000;
-}
-footer > div#footer{
+section#diferenciais{
+    width: 100vw;
+    height: 1054px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 0px;
 }
-hr{
+/* ---------------------*/
+section#diferenciais > div.centro{
+    width: calc(100vw - 500px);
+    display: flex;
+    align-items: center;
+}
+section#diferenciais > h2{
+    font-family: 'Krub', sans-serif;
+    font-size: 48px;
+    font-weight: 200;
+    text-align: center;
+}
+section#diferenciais > hr{
+    background-color: white;
+    width: 700px;
     height: 1px;
-    margin-bottom: 20px;
-    background-color: #505B65;
+    margin-bottom: 64px;
 }
+/* ---------------------*/
+div#info{
+    display: flex;
+    justify-content: space-between;
+}
+div#info > div.info{
+    width: 250px;
+    height: 140px;
+    margin-bottom: 10px;
+}
+div#info > div.info h3{
+    color: #CFDA4D;
+    text-align: center;
+    font-size: 19px;
+    font-family: 'Krub', sans-serif;
+    font-weight: 200;
+}
+div#info > div.info p{
+    margin-top: 29px;
+    text-align: center;
+    font-size: 14px;
+}
+/* ---------------------*/
+div#img{
+    display: flex;
+    justify-content: space-between;
+}
+/* ---------------------*/
+section#diferenciais a > button{
+    font-family: 'Inter', sans-serif;
+    background-color: transparent;
+    border: 1px solid white;
+    width: 300px;
+    height: 65px;
+    border-radius: 10px;
+    font-size: 3em;
+    color: white;
+    margin-top: 30px;
+    transition: 0.5s;
+}
+section#diferenciais a > button:hover{
+    background-color: #CFDA4D;
+    color: #181717;
+    transform: scale(1.20);
+    cursor: pointer;
+    border: none;
+}
+/* ---------------------*/
+/* ---------------------------------------------- */
+
+/* ---------------------------------------------- */
+
 /* ---------------------------------------------- */
