--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -35,7 +35,7 @@ body{
 header{
     width: 100vw;
     height: 90px;
-    padding: 2rem 9%;
+    padding: 2% 5%;
     background-color: #181717;
     display: flex;
     align-items: center;
@@ -73,6 +73,9 @@ section#home{
     flex-direction: column;
     font-family: 'Inter', sans-serif;
 }
+section#home > div#title{
+    margin-bottom: 114px;
+}
 section#home > div#title h2{
     font-family: 'Inter', sans-serif;
     font-weight: 200;
@@ -96,7 +99,7 @@ section#home a > button{
     border-radius: 10px;
     font-size: 4em;
     color: #383333;
-    margin-top: 114px;
+    
     transition: 0.3s;
 }
 section#home a > button:hover{
@@ -108,18 +111,12 @@ section#home a > button:hover{
 /* ---------------------------------------------- */
 section#diferenciais{
     width: 100vw;
-    height: 1054px;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 50px 0px;
 }
 /* ---------------------*/
-section#diferenciais > div.centro{
-    width: calc(100vw - 500px);
-    display: flex;
-    align-items: center;
-}
 section#diferenciais > h2{
     font-family: 'Krub', sans-serif;
     font-size: 48px;
@@ -134,6 +131,7 @@ section#diferenciais > hr{
 }
 /* ---------------------*/
 div#info{
+    width: calc(100vw - 500px);
     display: flex;
     justify-content: space-between;
 }
@@ -156,6 +154,7 @@ div#info > div.info p{
 }
 /* ---------------------*/
 div#img{
+    width: calc(100vw - 500px);
     display: flex;
     justify-content: space-between;
 }
@@ -171,17 +170,229 @@ section#diferenciais a > button{
     color: white;
     margin-top: 30px;
     transition: 0.5s;
+
 }
 section#diferenciais a > button:hover{
     background-color: #CFDA4D;
-    color: #181717;
+    color: #383333;
     transform: scale(1.20);
     cursor: pointer;
     border: none;
 }
+/* ---------------------------------------------- */
+
+/* ---------------------------------------------- */
+section#serviços{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #CFDA4D;
+}
 /* ---------------------*/
+section#serviços > p{
+    padding: 20px 0px;
+    font-size: 24px;
+}
+/* ---------------------*/
+section#serviços > div#serv{
+    width: 100%;
+    border-top: 3px solid #383333;
+    border-bottom: 3px solid #383333;
+    align-items: center;
+    text-align: center;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+}
+section#serviços > div#serv h2{
+    font-family: 'Krub', sans-serif;
+    font-size: 40px;
+    font-weight: 200;
+    text-align: center;
+}
+section#serviços > div#serv hr{
+    background-color: white;
+    width: 220px;
+    height: 1px;
+    margin-bottom: 64px;
+}
+/* ---------------------*/
+section#serviços > div#serv > div#servimg{
+    width: calc(100vw - 500px);
+    justify-content: center;
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+section#serviços > div#serv > div#servimg > div.servdiv{
+    width: 250px;
+}
+/* ---------------------*/
+section#serviços > div#icons{
+    width: calc(100vw - 500px);
+    display: flex;
+    justify-content: space-between;
+    color: #383333;
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+
+section#serviços > div#icons > div.icon{
+    width: 200px;
+    text-align: center;
+}
 /* ---------------------------------------------- */
 
 /* ---------------------------------------------- */
+section#inspiração{
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+section#inspiração > h2{
+    font-family: 'Krub', sans-serif;
+    font-size: 40px;
+    font-weight: 200;
+    text-align: center;
+}
+section#inspiração > hr{
+    background-color: white;
+    width: 280px;
+    height: 1px;
+    margin-bottom: 64px;
+}
+/* ---------------------*/
+div.divisão > img{
+    margin: 2.5px;
+}
+/* ---------------------*/
 
+/* ---------------------------------------------- */
+hr#sobsobre{
+    width: 100vw;
+    height: 3px;
+    background-color: #CFDA4D;
+}
+/* ---------------------------------------------- */
+
+/* ---------------------------------------------- */
+section#sobreNos{
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+/* ---------------------*/
+section#sobreNos h2{
+    font-family: 'Krub', sans-serif;
+    font-size: 40px;
+    font-weight: 200;
+    text-align: center;
+}
+section#sobreNos hr{
+    background-color: white;
+    width: 280px;
+    height: 1px;
+    margin-bottom: 64px;
+}
+/* ---------------------*/
+section#sobreNos > div#imgetxt{
+    width: calc(100vw - 500px);
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+    font-size: 18px;
+}
+section#sobreNos > div#imgetxt > div#sbrimg{
+    width: 50%;
+  
+}
+section#sobreNos > div#imgetxt > div#sbrtxt{
+    width: 47%;
+    font-family: 'Krub', sans-serif;
+}
+div#sbrtxt button{
+    margin-top: 80px;
+    background-color: transparent;
+    border: 1px solid #CFDA4D;
+    border-radius: 10px;
+    color: #CFDA4D;
+    padding: 5px;
+    width: 300px;
+    height: 65px;
+    font-size: 1.7em;
+    font-family: 'Inter', sans-serif;
+    transition: 0.5s;
+}
+section#sobreNos a > button:hover{
+    background-color: #CFDA4D;
+    color: #383333;
+    transform: scale(1.20);
+    cursor: pointer;
+    border: none;
+}
+/* ---------------------------------------------- */
+
+/* ---------------------------------------------- */
+section#contato{
+    width: 100vw;
+    position: relative;
+    justify-content: center;
+    overflow: hidden;
+    background-image: url("../Imagens/Contato.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Inter', sans-serif;
+    padding: 50px;
+}
+section#contato h2{
+    font-family: 'Krub', sans-serif;
+    font-size: 40px;
+    font-weight: 200;
+    text-align: center;
+}
+section#contato hr{
+    background-color: white;
+    width: 220px;
+    height: 1px;
+    margin-bottom: 64px;
+}
+/* ---------------------*/
+div#cont{
+    width: calc(100vw - 500px);
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
+    margin-bottom: 80px;
+}
+
+div#redes{
+    background-color: #CFDA4D;
+    width: 300px;
+    height: 80px;
+    display: flex;
+    
+}
+/* ---------------------------------------------- */
+
+/* ---------------------------------------------- */
+footer{
+    background-color: #000000;
+    font-size: 12px;
+    text-align: center;
+    padding: 5px;
+}
 /* ---------------------------------------------- */
