--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -358,6 +358,7 @@ section#contato{
     font-family: 'Inter', sans-serif;
     padding: 50px;
 }
+
 section#contato h2{
     font-family: 'Krub', sans-serif;
     font-size: 40px;
@@ -380,12 +381,75 @@ div#cont{
 }
 
 div#redes{
-    background-color: #CFDA4D;
-    width: 300px;
-    height: 80px;
     display: flex;
-    
+    align-items: center;
+    font-size: 40px;
 }
+div#redes a{
+    margin: 0 8px;
+    display: flex;
+}
+div#redes div#insta{
+    display: flex;
+    width: 100px;
+    padding: 10px;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    justify-content: center;
+    color: white;
+}
+div#redes div#insta > p{
+    display: none;
+}
+div#redes div#insta:hover{ 
+    display: flex;
+    width: 180px;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    background-color: #383333;
+    justify-content: left;
+    animation-name: mudaCorP;
+    animation-duration: 2s;
+    transition: .3s;
+}
+div#redes div#insta:hover > p{
+    display: flex;
+    font-size: 24px;
+    margin: auto 10px;
+}
+div#redes div#wpp{
+    display: flex;
+    width: 100px;
+    padding: 10px;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    justify-content: center;
+    color: rgb(255, 255, 255);
+}
+div#redes div#wpp:hover{ 
+    display: flex;
+    width: 180px;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    background-color: #383333;
+    justify-content: left;
+    animation-name: mudaCorP;
+    animation-duration: 2s;
+    transition: .3s;
+}
+div#redes div#wpp > p{
+    display: none;
+}
+div#redes div#wpp:hover > p{
+    display: flex;
+    font-size: 24px;
+    margin: auto 10px;
+}
+
+@keyframes mudaCorP {
+    from {color: rgba(255, 255, 255, 0);}
+    to {color: white;}
+  }
 /* ---------------------------------------------- */
 
 /* ---------------------------------------------- */
