--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -160,6 +160,27 @@ div#img{
     display: flex;
     justify-content: space-between;
 }
+div#img #img01{
+    width: 250px;
+    height: 230px;
+    background-image: url("../Imagens/modernização02.jpeg");
+    background-repeat: no-repeat;
+    background-position: left center;
+}
+div#img #img02{
+    width: 250px;
+    height: 230px;
+    background-image: url("../Imagens/atendimento02.jpeg");
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+div#img #img03{
+    width: 250px;
+    height: 230px;
+    background-image: url("../Imagens/custobeneficio02.jpeg");
+    background-repeat: no-repeat;
+    background-position: left center;
+}
 /* ---------------------*/
 section#diferenciais a > button{
     font-family: 'Inter', sans-serif;
@@ -220,15 +241,40 @@ section#serviços > div#serv hr{
     margin-bottom: 64px;
 }
 /* ---------------------*/
-section#serviços > div#serv > div#servimg{
+section#serviços > div#serv > div#img{
     width: calc(100vw - 500px);
     justify-content: center;
-    font-size: 20px;
+    font-size: 25px;
     display: flex;
     justify-content: space-between;
 }
-section#serviços > div#serv > div#servimg > div.servdiv{
+div#img div#simg01{
+    background-image: url("../Imagens/Negocio.png");
+    background-repeat: no-repeat;
+}
+div#img div#simg02{
+    background-image: url("../Imagens/Montagem.png");
+    background-repeat: no-repeat;
+}
+div#img div#simg03{
+    background-image: url("../Imagens/Fabricação.png");
+    background-repeat: no-repeat;
+}
+.imgServ{
     width: 250px;
+    height: 230px;
+    background-position: left center;
+}
+section#serviços > div#serv > div#servdiv{
+    width: calc(100vw - 500px);
+    font-size: 25px;
+    display: flex;
+    justify-content: space-between;
+}
+div.pinfo{
+    width: 250px;
+    height: 200px;  
+    padding: 5px;
 }
 /* ---------------------*/
 section#serviços > div#icons{
@@ -316,14 +362,15 @@ section#sobreNos > div#imgetxt{
 }
 section#sobreNos > div#imgetxt > div#sbrimg{
     width: 50%;
-  
+    height: 504px;
+    background-image: url("../Imagens/WhatsApp\ Image\ 2023-03-29\ at\ 14.41.35\ \(2\).jpeg")
 }
 section#sobreNos > div#imgetxt > div#sbrtxt{
     width: 47%;
     font-family: 'Krub', sans-serif;
 }
 div#sbrtxt button{
-    margin-top: 80px;
+    margin-top: 70px;
     background-color: transparent;
     border: 1px solid #CFDA4D;
     border-radius: 10px;
@@ -465,7 +512,7 @@ footer{
 }
 
 
-@media screen and (min-width: 601px) and (max-width: 1024px) {
+@media screen and (min-width: 601px) and (max-width: 1024px) {  
   
     *{
         margin: 0;
@@ -625,7 +672,27 @@ footer{
         display: flex;
         justify-content: space-between;
     }
-
+    div#img #img01{
+        width: 250px;
+        height: 230px;
+        background-image: url("../Imagens/modernização02.jpeg");
+        background-repeat: no-repeat;
+        background-position: left center;
+    }
+    div#img #img02{
+        width: 250px;
+        height: 230px;
+        background-image: url("../Imagens/atendimento02.jpeg");
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+    div#img #img03{
+        width: 250px;
+        height: 230px;
+        background-image: url("../Imagens/custobeneficio02.jpeg");
+        background-repeat: no-repeat;
+        background-position: left center;
+    }
     /* ---------------------*/
     section#diferenciais a > button{
         font-family: 'Inter', sans-serif;
@@ -657,9 +724,10 @@ footer{
         background-color: #CFDA4D;
     }
     /* ---------------------*/
-    section#serviços > p{
+    section#serviços > p#principal{
         padding: 20px 0px;
         font-size: 24px;
+        text-align: center;
     }
     /* ---------------------*/
     section#serviços > div#serv{
@@ -685,14 +753,42 @@ footer{
         margin-bottom: 64px;
     }
     /* ---------------------*/
-    section#serviços > div#serv > div#servimg{
+    section#serviços > div#serv > div#img{
         width: 750px;
         justify-content: center;
-        font-size: 20px;
+        font-size: 25px;
         display: flex;
         justify-content: space-between;
     }
-
+    div#img div#simg01{
+        background-image: url("../Imagens/Negocio.png");
+        background-repeat: no-repeat;
+    }
+    div#img div#simg02{
+        background-image: url("../Imagens/Montagem.png");
+        background-repeat: no-repeat;
+    }
+    div#img div#simg03{
+        background-image: url("../Imagens/Fabricação.png");
+        background-repeat: no-repeat;
+    }
+    .imgServ{
+        width: 250px;
+        height: 230px;
+        background-position: left center;
+    }
+    section#serviços > div#serv > div#servdiv{
+        width: 750px;
+        justify-content: center;
+        font-size: 25px;
+        display: flex;
+        justify-content: space-between;
+    }
+    div.pinfo{
+        width: 250px;
+        height: 230px;  
+        padding: 5px;
+    }
     /* ---------------------*/
     section#serviços > div#icons{
         width: 700px;
@@ -732,10 +828,7 @@ footer{
         margin-bottom: 64px;
     }
     /* ---------------------*/
-    div.divisão > img{
-        margin: 2.5px;
-    }
-    /* ---------------------*/
+    
     
     /* ---------------------------------------------- */
     hr#sobsobre{
@@ -770,7 +863,7 @@ footer{
     }
     /* ---------------------*/
     section#sobreNos > div#imgetxt{
-        width: 750px;
+        width: 100%;
         height: 504px;
         display: flex;
         justify-content: space-between;
@@ -780,9 +873,8 @@ footer{
     }
     section#sobreNos > div#imgetxt > div#sbrimg{
         width: 50%;
-    }
-    section#sobreNos > div#imgetxt > div#sbrimg img{
-        width: 100%; 
+        height: 504px;
+        background-image: url("../Imagens/WhatsApp\ Image\ 2023-03-29\ at\ 14.41.35\ \(2\).jpeg");
     }
     section#sobreNos > div#imgetxt > div#sbrtxt{
         width: 47%;
@@ -1093,14 +1185,25 @@ footer{
         display: flex;
     }
     div#img #img01{
-        width: 33%;
+        width: 148px;
+        height: 231px;
+        background-image: url("../Imagens/modernização02.jpeg");
+        background-repeat: no-repeat;
+        background-position: left center;
     }
     div#img #img02{
-        width: 33%;
-        img
+        width: 148px;
+        height: 231px;
+        background-image: url("../Imagens/atendimento02.jpeg");
+        background-repeat: no-repeat;
+        background-position: center center;
     }
     div#img #img03{
-        width: 33%;
+        width: 148px;
+        height: 231px;
+        background-image: url("../Imagens/custobeneficio02.jpeg");
+        background-repeat: no-repeat;
+        background-position: left center;
     }
 
     /* ---------------------*/
@@ -1136,7 +1239,7 @@ footer{
     /* ---------------------*/
     section#serviços > p{
         padding: 20px 0px;
-        font-size: 24px;
+        font-size: 16px;
     }
     /* ---------------------*/
     section#serviços > div#serv{
@@ -1145,7 +1248,7 @@ footer{
         border-bottom: 3px solid #383333;
         align-items: center;
         text-align: center;
-        padding: 50px;
+        padding: 25px;
         display: flex;
         flex-direction: column;
     }
@@ -1162,24 +1265,50 @@ footer{
         margin-bottom: 64px;
     }
     /* ---------------------*/
-    section#serviços > div#serv > div#servimg{
-        width: 750px;
+    section#serviços > div#serv > div#img{
+        width: 100%;
         justify-content: center;
-        font-size: 20px;
         display: flex;
         justify-content: space-between;
     }
-
+    div#img div#simg01{
+        background-image: url("../Imagens/Negocio.png");
+        background-repeat: no-repeat;
+    }
+    div#img div#simg02{
+        background-image: url("../Imagens/Montagem.png");
+        background-repeat: no-repeat;
+    }
+    div#img div#simg03{
+        background-image: url("../Imagens/Fabricação.png");
+        background-repeat: no-repeat;
+    }
+    .imgServ{
+        width: 250px;
+        height: 230px;
+        background-position: left center;
+    }
+    section#serviços > div#serv > div#servdiv{
+        width: 100%;
+        justify-content: center;
+        font-size: 12px;
+        display: flex;
+        justify-content: space-between;
+    }
+    div.pinfo{
+        width: 250px;
+        height: 230px;  
+        padding: 5px;
+    }
     /* ---------------------*/
     section#serviços > div#icons{
-        width: 700px;
+        width: 100%;
         display: flex;
         justify-content: space-between;
         color: #383333;
-        font-size: 20px;
+        font-size: 16px;
         margin-bottom: 25px;
     }
-    
     section#serviços > div#icons > div.icon{
         width: 200px;
         text-align: center;
@@ -1216,7 +1345,7 @@ footer{
     
     /* ---------------------------------------------- */
     hr#sobsobre{
-        width: 100vw;
+        width: 100%;
         height: 3px;
         background-color: #CFDA4D;
     }
@@ -1227,7 +1356,7 @@ footer{
         width: 100%;
         align-items: center;
         justify-content: space-between;
-        padding: 50px;
+        padding: 25px;
         display: flex;
         flex-direction: column;
         text-align: center;
@@ -1247,22 +1376,21 @@ footer{
     }
     /* ---------------------*/
     section#sobreNos > div#imgetxt{
-        width: 750px;
-        height: 504px;
-        display: flex;
+        width: 100%;
         justify-content: space-between;
         text-align: center;
         align-items: center;
         font-size: 17px;
     }
     section#sobreNos > div#imgetxt > div#sbrimg{
-        width: 50%;
-    }
-    section#sobreNos > div#imgetxt > div#sbrimg img{
-        width: 100%; 
+        width: 100%;
+        height: 300px;
+        background-image: url("../Imagens/WhatsApp\ Image\ 2023-03-29\ at\ 14.41.35\ \(2\).jpeg");
     }
     section#sobreNos > div#imgetxt > div#sbrtxt{
-        width: 47%;
+        width: 100%;
+        font-size: 12px;
+        margin-top: 20px;
         font-family: 'Krub', sans-serif;
     }
     div#sbrtxt button{
@@ -1301,7 +1429,7 @@ footer{
         display: flex;
         flex-direction: column;
         font-family: 'Inter', sans-serif;
-        padding: 50px;
+        padding: 25px;
     }
     
     section#contato h2{
@@ -1318,13 +1446,15 @@ footer{
     }
     /* ---------------------*/
     div#cont{
-        width: 750px;
-        display: flex;
+        width: 50%;
+        align-items: center;
         justify-content: space-between;
-        font-size: 20px;
-        margin-bottom: 80px;
+        font-size: 14px;
+        margin-bottom: 50px;
     }
-    
+    div#gyn{
+        margin-top: 30px;
+    }
     div#redes{
         display: flex;
         align-items: center;
