--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -9,11 +9,6 @@
 *{
     margin: 0;
     padding: 0;
-    border: none;
-    box-sizing: border-box;
-    text-decoration: none;
-    outline: none;
-    scroll-behavior: smooth;
     font-family: 'Inter', sans-serif;
 }
 :root{
@@ -35,27 +30,44 @@ body{
 
 /* ----- Header ----- */
 header{
-    width: 100vw;
-    height: 90px;
-    padding: 2% 5%;
     background-color: #181717;
-    display: flex;
-    align-items: center;
     justify-content: space-between;
 }
-.logo{
-    width: 220px;
-    height: 69px;
+.nav-bar{
+    display: flex;
+    justify-content: space-between;
+    padding: 2% 5%;
 }
-header > nav > a{
-    font-size: 20px;
+.logo{
+    display: flex;
+    align-items: center;
+}
+.nav-list{
+    display: flex;
+    align-items: center;
+}
+.nav-list ul{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+li{
+    margin: 0 15px;
+}
+.nav-link{
+    text-decoration: none;
+    font-size: 1.7rem;
     color: white;
-    margin-left: 25px;
+}
+.nav-link:hover{
+    color: #CFDA4D;
     transition: 1s;
 }
-header > nav > a:hover{
-    color: #ceda4dda;
-    text-decoration: none;
+#mobile-menu-icon{
+    display: none;
+}
+#mobile-menu{
+    display: none;
 }
 /* ---------------------*/
 
@@ -543,27 +555,44 @@ footer{
     
     /* ----- Header ----- */
     header{
-        width: 100vw;
-        height: 90px;
-        padding: 2% 5%;
         background-color: #181717;
-        display: flex;
-        align-items: center;
         justify-content: space-between;
     }
-    .logo{
-        width: 220px;
-        height: 69px;
+    .nav-bar{
+        display: flex;
+        justify-content: space-between;
+        padding: 2% 5%;
     }
-    header > nav > a{
-        font-size: 20px;
+    .logo{
+        display: flex;
+        align-items: center;
+    }
+    .nav-list{
+        display: flex;
+        align-items: center;
+    }
+    .nav-list ul{
+        display: flex;
+        justify-content: center;
+        list-style: none;
+    }
+    li{
+        margin: 0 15px;
+    }
+    .nav-link{
+        text-decoration: none;
+        font-size: 1.7rem;
         color: white;
-        margin-left: 25px;
+    }
+    .nav-link:hover{
+        color: #CFDA4D;
         transition: 1s;
     }
-    header > nav > a:hover{
-        color: #ceda4dda;
-        text-decoration: none;
+    #mobile-menu-icon{
+        display: none;
+    }
+    #mobile-menu{
+        display: none;
     }
     /* ---------------------*/
     
@@ -1055,27 +1084,71 @@ footer{
     
     /* ----- Header ----- */
     header{
-        width: 100vw;
-        height: 100px;
-        padding: 2% 5%;
         background-color: #181717;
-        display: flex;
-        align-items: center;
         justify-content: space-between;
     }
-    .logo{
-        width: 220px;
-        height: 69px;
+    .nav-bar{
+        display: flex;
+        justify-content: space-between;
+        padding: 2% 5%;
+        align-items: center;
     }
-    header > nav > a{
-        font-size: 20px;
+    .logo{
+        display: flex;
+        align-items: center;
+    }
+    .nav-list{
+        display: flex;
+        align-items: center;
+    }
+    .nav-list ul{
+        display: flex;
+        justify-content: center;
+        list-style: none;
+    }
+    li{
+        display: none;
+    }
+    .nav-link{
+        text-decoration: none;
+        font-size: 1.7rem;
         color: white;
-        margin-left: 25px;
+    }
+    .nav-link:hover{
+        color: #CFDA4D;
         transition: 1s;
     }
-    header > nav > a:hover{
-        color: #ceda4dda;
-        text-decoration: none;
+    #mobile-menu-icon button{
+        background-color: transparent;
+        color: white;
+        border: none;
+        cursor: pointer;
+    }
+    #mobile-menu{
+        display: none;
+    }
+    button > .material-symbols-outlined {
+        font-size: 30px;
+        font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 48
+    }
+
+    #mobile-menu ul{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 1rem;
+    }
+    #mobile-menu li{
+        display: block;
+        padding-top: 1.2rem;
+    }
+    
+    .open{
+        display: block;
     }
     /* ---------------------*/
     
@@ -1181,7 +1254,7 @@ footer{
     /* ---------------------*/
     div#img{
         width: 90%;
-        margin-top: 20px;
+        margin-top: 30px;
         display: flex;
     }
     div#img #img01{
